<resources>
    <string name="app_name">EATDY</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity Level</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target weight</string>
    <string name="cm">cm</string>
    <string name="feet_inches">feet and inches</string>
    <string name="kg">kg</string>
    <string name="pound">pound</string>

    <string name="activity">Activity level</string>
    <string-array name="activity_array">
        <item name="little to no exercise">little to no exercise</item>
        <item name="Light exercise (1-3 days per week)">Light exercise (1-3 days per week)</item>
        <item name="Moderate exercise (3-5 days per week)">Moderate exercise (3-5 days per week)</item>
        <item name="Heavy exercise (6-7 days per week)">Heavy exercise (6-7 days per week)</item>
        <item name="Very heavy exercise (twice per day,extra heavy workouts)">Very heavy exercise (twice per day,extra heavy workouts)</item>
    </string-array>



    <string name="measurements">Measurement</string>
    <string-array name="measurement_array">
        <item name="metric">Metric</item>
        <item name="imperial">Imperial</item>
    </string-array>


    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string-array name="array_month">
        <item name="January">January</item>
        <item name="February">February</item>
        <item name="March">March</item>
        <item name="April">April</item>
        <item name="May">YeMayar</item>
        <item name="June">June</item>
        <item name="July">July</item>
        <item name="August">August</item>
        <item name="September">September</item>
        <item name="October">October</item>
        <item name="November">November</item>
        <item name="December">December</item>
    </string-array>
    <string name="blank"> </string>
</resources>