<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="TODO"
            android:src="@drawable/logo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--   Email  -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </TableRow>
            <!--   //Email  -->

            <!--   Date of birth  -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/date_of_birth" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/editTextDOBDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="numberSigned" />

                        <Spinner
                            android:id="@+id/spinnerDOBonth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/array_month"
                            android:spinnerMode="dropdown" />

                        <EditText
                            android:id="@+id/editTextDOBYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="4"
                            android:inputType="numberSigned" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day" />

                        <TextView
                            android:id="@+id/textViewMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text="@string/month" />

                        <TextView
                            android:id="@+id/textViewYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text="@string/year" />
                    </TableRow>


                </TableLayout>

            </TableRow>
            <!--   //Date of birth  -->

            <!--  Gender    -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginTop="11dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/radioGroupGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonGenderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/male"
                                android:layout_marginRight="5dp"
                                />

                            <RadioButton
                                android:id="@+id/radioButtonGenderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                        </RadioGroup>
                    </TableRow>


                </TableLayout>

            </TableRow>
            <!-- // Gender    -->

            <!--  Measurement  -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewMeasurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measurements" />

                <Spinner
                    android:id="@+id/spinnerMeasurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/measurement_array" />

            </TableRow>
            <!-- //  Measurement  -->

            <!-- Height -->
             <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:layout_marginTop="12dp">

                 <TextView
                     android:id="@+id/textViewHeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/height"
                     android:layout_marginTop="12dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/editTextHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />
                        <EditText
                            android:id="@+id/editTextInches"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cm" />
                    </TableRow>
                </TableLayout>

             </TableRow>
            <!-- //Height-->

            <!-- weight -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:layout_marginTop="12dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/editTextWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />


                        <TextView
                            android:id="@+id/textViewKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kg" />
                    </TableRow>
                </TableLayout>

            </TableRow>
            <!-- //weight-->

            <!-- Activity Level -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity"
                    android:layout_marginTop="12dp"/>
                <Spinner
                    android:id="@+id/spinnerActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/activity_array" />



            </TableRow>
            <!-- //Activity Level-->

        </TableLayout>

    </LinearLayout>
</ScrollView>
